// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Ratings component only renders the single selected Rating with a footer in summary mode 1`] = `
<div
  className="rating-tier selected"
  onClick={null}
  onKeyPress={[Function]}
  role={null}
  tabIndex={null}
>
  <div
    className="rating-description"
  >
    <Text
      as="span"
      letterSpacing="normal"
      lineHeight="condensed"
      size="small"
      weight="bold"
      wrap="normal"
    >
      Meh
    </Text>
  </div>
  <Text
    as="span"
    letterSpacing="normal"
    lineHeight="condensed"
    size="small"
    wrap="normal"
  >
    More Verbosity
  </Text>
  <div
    className="rating-footer"
  >
    <div>
      ow my foot
    </div>
  </div>
  <div
    aria-label={null}
    className="shader nearMasteryShader"
    style={
      {
        "backgroundColor": null,
      }
    }
  >
    <div
      className="triangle"
      style={
        {
          "borderBottomColor": null,
        }
      }
    />
  </div>
</div>
`;

exports[`The Ratings component renders a default rating if none of the ratings are selected 1`] = `
<div
  className="rating-tier"
  onClick={null}
  onKeyPress={[Function]}
  role={null}
  tabIndex={null}
>
  <div
    className="rating-description"
  >
    <Text
      as="span"
      letterSpacing="normal"
      lineHeight="condensed"
      size="small"
      weight="bold"
      wrap="normal"
    >
      No details
    </Text>
  </div>
  <Text
    as="span"
    letterSpacing="normal"
    lineHeight="condensed"
    size="small"
    wrap="normal"
  />
  <div
    className="rating-footer"
  >
    <div>
      ow my foot
    </div>
  </div>
  <div
    aria-label={null}
    className="shader"
    style={
      {
        "backgroundColor": undefined,
      }
    }
  >
    <div
      className="triangle"
      style={
        {
          "borderBottomColor": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`The Ratings component renders the Rating sub-components as expected when range rating enabled 1`] = `
<div
  className="rating-tier"
  onClick={null}
  onKeyPress={[Function]}
  role={null}
  tabIndex={null}
>
  <div
    className="rating-points"
  >
    <Text
      as="span"
      letterSpacing="normal"
      size="small"
      weight="bold"
      wrap="normal"
    >
      10 to &gt;5 pts
    </Text>
  </div>
  <div
    className="rating-description"
  >
    <Text
      as="span"
      letterSpacing="normal"
      lineHeight="condensed"
      size="small"
      weight="bold"
      wrap="normal"
    >
      Superb
    </Text>
  </div>
  <Text
    as="span"
    letterSpacing="normal"
    lineHeight="condensed"
    size="small"
    wrap="normal"
  />
  <div
    className="rating-footer"
  />
  <div
    aria-label={null}
    className="shader"
    style={
      {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className="triangle"
      style={
        {
          "borderBottomColor": "transparent",
        }
      }
    />
  </div>
</div>
`;

exports[`The Ratings component renders the Rating sub-components as expected when range rating enabled 2`] = `
<div
  className="rating-tier selected"
  onClick={null}
  onKeyPress={[Function]}
  role={null}
  tabIndex={null}
>
  <div
    className="rating-points"
  >
    <Text
      as="span"
      letterSpacing="normal"
      size="small"
      weight="bold"
      wrap="normal"
    >
      5 to &gt;1 pts
    </Text>
  </div>
  <div
    className="rating-description"
  >
    <Text
      as="span"
      letterSpacing="normal"
      lineHeight="condensed"
      size="small"
      weight="bold"
      wrap="normal"
    >
      Meh
    </Text>
  </div>
  <Text
    as="span"
    letterSpacing="normal"
    lineHeight="condensed"
    size="small"
    wrap="normal"
  >
    More Verbosity
  </Text>
  <div
    className="rating-footer"
  />
  <div
    aria-label="This rating is selected"
    className="shader nearMasteryShader"
    style={
      {
        "backgroundColor": null,
      }
    }
  >
    <div
      className="triangle"
      style={
        {
          "borderBottomColor": null,
        }
      }
    />
  </div>
</div>
`;

exports[`The Ratings component renders the Rating sub-components as expected when range rating enabled 3`] = `
<div
  className="rating-tier"
  onClick={null}
  onKeyPress={[Function]}
  role={null}
  tabIndex={null}
>
  <div
    className="rating-points"
  >
    <Text
      as="span"
      letterSpacing="normal"
      size="small"
      weight="bold"
      wrap="normal"
    >
      1 to &gt;0 pts
    </Text>
  </div>
  <div
    className="rating-description"
  >
    <Text
      as="span"
      letterSpacing="normal"
      lineHeight="condensed"
      size="small"
      weight="bold"
      wrap="normal"
    >
      Subpar
    </Text>
  </div>
  <Text
    as="span"
    letterSpacing="normal"
    lineHeight="condensed"
    size="small"
    wrap="normal"
  />
  <div
    className="rating-footer"
  />
  <div
    aria-label={null}
    className="shader"
    style={
      {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className="triangle"
      style={
        {
          "borderBottomColor": "transparent",
        }
      }
    />
  </div>
</div>
`;

exports[`The Ratings component renders the root component as expected 1`] = `
<div>
  <Flex
    as="span"
    direction="row"
    display="flex"
    gap="none"
    justifyItems="start"
    withVisualDebug={false}
    wrap="no-wrap"
  >
    <Item
      align="start"
      as="span"
      key="tier-0"
      shouldGrow={false}
      shouldShrink={false}
      width="33.333333333333336%"
    >
      <Rating
        assessing={false}
        classes="rating-tier"
        description="Superb"
        endOfRangePoints={null}
        footer={null}
        hidePoints={false}
        id="1"
        isSummary={false}
        key="0"
        onClick={[Function]}
        points={10}
        selected={false}
        shaderClass={null}
        tierColor="transparent"
      />
    </Item>
    <Item
      align="start"
      as="span"
      key="tier-1"
      shouldGrow={false}
      shouldShrink={false}
      width="33.333333333333336%"
    >
      <Rating
        assessing={false}
        classes="rating-tier selected"
        description="Meh"
        endOfRangePoints={null}
        footer={null}
        hidePoints={false}
        id="2"
        isSummary={false}
        key="1"
        long_description="More Verbosity"
        onClick={[Function]}
        points={5}
        selected={true}
        shaderClass="nearMasteryShader"
        tierColor={null}
      />
    </Item>
    <Item
      align="start"
      as="span"
      key="tier-2"
      shouldGrow={false}
      shouldShrink={false}
      width="33.333333333333336%"
    >
      <Rating
        assessing={false}
        classes="rating-tier"
        description="Subpar"
        endOfRangePoints={null}
        footer={null}
        hidePoints={false}
        id="3"
        isSummary={false}
        key="2"
        onClick={[Function]}
        points={1}
        selected={false}
        shaderClass={null}
        tierColor="transparent"
      />
    </Item>
  </Flex>
</div>
`;
